feat: 숙소 추천 서비스에 사용자가 등록한 반려동물 기반 추천 로직 추가
- 기존 추천 로직들과 중복되는 부분 메서드로 분리하는 방식으로 리펙토링 진행