@@ -7,7 +7,6 @@ import co.elastic.clients.elasticsearch._types.query_dsl.TermQuery;
 import co.elastic.clients.elasticsearch.core.SearchRequest;
 import co.elastic.clients.elasticsearch.core.SearchResponse;
 import co.elastic.clients.elasticsearch.core.search.Hit;
-import co.elastic.clients.json.JsonData;
 import com.meongnyangerang.meongnyangerang.domain.accommodation.Accommodation;
 import com.meongnyangerang.meongnyangerang.domain.accommodation.AccommodationDocument;
 import com.meongnyangerang.meongnyangerang.domain.accommodation.PetType;
@@ -15,9 +14,8 @@ import com.meongnyangerang.meongnyangerang.domain.accommodation.facility.Accommo
 import com.meongnyangerang.meongnyangerang.domain.recommendation.PetFacilityScoreMap;
 import com.meongnyangerang.meongnyangerang.domain.room.Room;
 import com.meongnyangerang.meongnyangerang.domain.room.facility.RoomPetFacilityType;
-import com.meongnyangerang.meongnyangerang.domain.user.ActivityLevel;
-import com.meongnyangerang.meongnyangerang.domain.user.Personality;
 import com.meongnyangerang.meongnyangerang.domain.user.UserPet;
+import com.meongnyangerang.meongnyangerang.dto.accommodation.PetRecommendationGroup;
 import com.meongnyangerang.meongnyangerang.dto.accommodation.RecommendationPageResponse;
 import com.meongnyangerang.meongnyangerang.dto.accommodation.RecommendationResponse;
 import com.meongnyangerang.meongnyangerang.exception.ErrorCode;
@@ -27,11 +25,12 @@ import com.meongnyangerang.meongnyangerang.repository.accommodation.Accommodatio
 import com.meongnyangerang.meongnyangerang.repository.room.RoomRepository;
 import java.io.IOException;
 import java.util.AbstractMap;
+import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
-import java.util.stream.Collectors;
+import java.util.Optional;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.data.domain.Pageable;
@@ -63,16 +62,12 @@ public class AccommodationRecommendationService {
   }
 
   // 비로그인 사용자 기본 추천 더보기
-  public RecommendationPageResponse getDefaultLoadMoreRecommendations(Pageable pageable) {
-    // 총 개수를 고려해 최대 100개까지 결과를 가져오도록 제한
-    int size = pageable.getPageSize();
+  public RecommendationPageResponse getDefaultLoadMoreRecommendations(PetType type,
+      Pageable pageable) {
+    int size = calculateActualSize(pageable);
     int from = (int) pageable.getOffset();
 
-    if (from + size > MAX_RESULTS) {
-      size = Math.max(0, MAX_RESULTS - from);
-    }
-
-    Query query = buildRatingFilterQuery();
+    Query query = buildPetTypeQuery(type.name());
 
     // Elasticsearch 요청
     SearchRequest request = buildSearchRequest(query, "totalRating", true, size, from);
@@ -82,7 +77,6 @@ public class AccommodationRecommendationService {
       SearchResponse<AccommodationDocument> response =
           elasticsearchClient.search(request, AccommodationDocument.class);
 
-      // 응답을 페이지별로 구성
       List<RecommendationResponse> content = response.hits().hits().stream()
           .map(Hit::source).filter(Objects::nonNull)
           .map(this::mapToResponse)
@@ -103,14 +97,56 @@ public class AccommodationRecommendationService {
     }
   }
 
-  // 로그인 사용자 맞춤 추천
-  public Map<String, List<RecommendationResponse>> getUserPetRecommendations(Long userId) {
+  // 사용자가 등록한 반려동물 기반 추천
+  public List<PetRecommendationGroup> getUserPetRecommendations(Long userId) {
     List<UserPet> userPets = userPetRepository.findAllByUserId(userId);
-    Map<String, List<RecommendationResponse>> result = new HashMap<>();
+    List<PetRecommendationGroup> result = new ArrayList<>();
+
     for (UserPet pet : userPets) {
-      result.put(pet.getName(), searchByUserPet(pet));
+      List<RecommendationResponse> recommendations = searchByUserPet(pet);
+      result.add(new PetRecommendationGroup(pet.getId(), pet.getName(), recommendations));
     }
+
     return result;
+  }
+
+  // 사용자가 등록한 반려동물 기반 추천 더보기
+  public RecommendationPageResponse getUserPetLoadMoreRecommendations(Long userId,
+      Long petId, Pageable pageable) {
+    UserPet pet = validateAndGetUserPet(userId, petId);
+
+    int size = calculateActualSize(pageable);
+    int from = (int) pageable.getOffset();
+
+    Map<AccommodationPetFacilityType, Integer> accScoreMap = getAccommodationScoreMap(pet);
+    Map<RoomPetFacilityType, Integer> roomScoreMap = getRoomScoreMap(pet);
+
+    // 해당 반려동물 유형 필터링 쿼리
+    Query query = buildPetTypeQuery(pet.getType().name());
+
+    // Elasticsearch 요청 생성 (정렬 없이 점수 후처리용)
+    SearchRequest request = buildSearchRequest(query, "totalRating", false, size, from);
+
+    try {
+      SearchResponse<AccommodationDocument> response =
+          elasticsearchClient.search(request, AccommodationDocument.class);
+
+      // 점수 계산 및 정렬
+      List<RecommendationResponse> content = calculateScoreAndSort(response, accScoreMap,
+          roomScoreMap);
+
+      long totalElements = response.hits().total().value();
+      int totalPages = (int) Math.ceil((double) totalElements / pageable.getPageSize());
+
+      return new RecommendationPageResponse(
+          content,
+          pageable.getPageNumber(),
+          totalPages,
+          (from + size >= MAX_RESULTS || totalElements <= (from + size))
+      );
+    } catch (IOException e) {
+      throw new MeongnyangerangException(ErrorCode.USER_RECOMMENDATION_FAILED);
+    }
   }
 
   // 많은 사람들이 관심을 가진 숙소 추천
@@ -149,7 +185,7 @@ public class AccommodationRecommendationService {
       // 검색 결과에서 source만 추출하여 리스트로 반환
       return response.hits().hits().stream()
           .map(Hit::source)
-          .collect(Collectors.toList());
+          .toList();
     } catch (IOException e) {
       throw new MeongnyangerangException(ErrorCode.DEFAULT_RECOMMENDATION_FAILED);
     }
@@ -157,19 +193,12 @@ public class AccommodationRecommendationService {
 
   // 사용자 반려동물 정보를 바탕으로 맞춤 추천 수행
   private List<RecommendationResponse> searchByUserPet(UserPet pet) {
-    // 반려동물 성향 정보 추출
-    PetType type = pet.getType();
-    ActivityLevel activity = pet.getActivityLevel();
-    Personality personality = pet.getPersonality();
-
     // 반려동물 성향에 따른 시설 점수 맵 생성
-    Map<AccommodationPetFacilityType, Integer> accScoreMap = PetFacilityScoreMap.getAccommodationScore(
-        type, activity, personality);
-    Map<RoomPetFacilityType, Integer> roomScoreMap = PetFacilityScoreMap.getRoomScore(type,
-        activity, personality);
+    Map<AccommodationPetFacilityType, Integer> accScoreMap = getAccommodationScoreMap(pet);
+    Map<RoomPetFacilityType, Integer> roomScoreMap = getRoomScoreMap(pet);
 
     // allowedPetTypes 필드 기반 필터링 쿼리 생성
-    Query query = buildPetTypeQuery(type.name());
+    Query query = buildPetTypeQuery(pet.getType().name());
 
     // 정렬 없이 (점수로 후처리 예정) 검색 요청 생성 (source 필터링 생략)
     SearchRequest request = buildSearchRequest(query, null, false, 0, 0);
@@ -180,15 +209,7 @@ public class AccommodationRecommendationService {
           elasticsearchClient.search(request, AccommodationDocument.class);
 
       // 각 문서에 대해 점수 계산 후 정렬하여 RecommendationResponse로 변환
-      return response.hits().hits().stream()
-          .map(Hit::source)
-          .filter(Objects::nonNull)
-          .map(doc -> new AbstractMap.SimpleEntry<>(calculateScore(doc, accScoreMap, roomScoreMap),
-              doc)) // 점수와 문서를 함께 보관
-          .sorted((a, b) -> Integer.compare(b.getKey(), a.getKey())) // 점수 기준 내림차순 정렬
-          .map(entry -> mapToResponse(entry.getValue())) // 최종 응답 객체로 매핑
-          .toList();
-
+      return calculateScoreAndSort(response, accScoreMap, roomScoreMap);
     } catch (IOException e) {
       throw new MeongnyangerangException(ErrorCode.USER_RECOMMENDATION_FAILED);
     }
@@ -202,16 +223,6 @@ public class AccommodationRecommendationService {
     )._toQuery();
   }
 
-  private Query buildRatingFilterQuery() {
-    return Query.of(q -> q
-        .bool(b -> b
-            .must(Query.of(qr -> qr
-                .range(r -> r.field("totalRating").gte(JsonData.of(3.0))))
-            )
-        )
-    );
-  }
-
   // 공통 SearchRequest 생성 메서드
   private SearchRequest buildSearchRequest(Query query, String sortField,
       boolean withSourceFilter, int size, int from) {
@@ -221,8 +232,7 @@ public class AccommodationRecommendationService {
           .query(query);
 
       if (size != 0) {
-        builder.size(size);
-        builder.from(from);
+        builder.size(size).from(from);
       } else {
         builder.size(SIZE);
       }
@@ -241,6 +251,18 @@ public class AccommodationRecommendationService {
 
       return builder;
     });
+  }
+
+  // 반려동물 정보로 숙소 시설 점수 맵 생성
+  private Map<AccommodationPetFacilityType, Integer> getAccommodationScoreMap(UserPet pet) {
+    return PetFacilityScoreMap.getAccommodationScore(
+        pet.getType(), pet.getActivityLevel(), pet.getPersonality());
+  }
+
+  // 반려동물 정보로 객실 시설 점수 맵 생성
+  private Map<RoomPetFacilityType, Integer> getRoomScoreMap(UserPet pet) {
+    return PetFacilityScoreMap.getRoomScore(
+        pet.getType(), pet.getActivityLevel(), pet.getPersonality());
   }
 
   // 숙소의 시설 점수를 계산 (반려동물 성향 기반)
@@ -263,6 +285,32 @@ public class AccommodationRecommendationService {
     return accScore + roomScore;
   }
 
+  private int calculateActualSize(Pageable pageable) {
+    int size = pageable.getPageSize();
+    int from = (int) pageable.getOffset();
+
+    if (from + size > MAX_RESULTS) {
+      return Math.max(0, MAX_RESULTS - from);
+    }
+    return size;
+  }
+
+  // 점수 계산 및 정렬 처리
+  private List<RecommendationResponse> calculateScoreAndSort(
+      SearchResponse<AccommodationDocument> response,
+      Map<AccommodationPetFacilityType, Integer> accScoreMap,
+      Map<RoomPetFacilityType, Integer> roomScoreMap) {
+
+    return response.hits().hits().stream()
+        .map(Hit::source)
+        .filter(Objects::nonNull)
+        .map(doc -> new AbstractMap.SimpleEntry<>(calculateScore(doc, accScoreMap, roomScoreMap),
+            doc))
+        .sorted((a, b) -> Integer.compare(b.getKey(), a.getKey()))
+        .map(entry -> mapToResponse(entry.getValue()))
+        .toList();
+  }
+
   // AccommodationDocument를 응답 객체로 변환
   private RecommendationResponse mapToResponse(AccommodationDocument doc) {
     return RecommendationResponse.builder()
@@ -272,5 +320,20 @@ public class AccommodationRecommendationService {
         .totalRating(doc.getTotalRating())
         .thumbnailUrl(doc.getThumbnailUrl())
         .build();
+  }
+
+  private UserPet validateAndGetUserPet(Long userId, Long petId) {
+    Optional<UserPet> petOptional = userPetRepository.findById(petId);
+
+    if (petOptional.isEmpty()) {
+      throw new MeongnyangerangException(ErrorCode.NOT_EXIST_PET);
+    }
+
+    UserPet pet = petOptional.get();
+    if (!Objects.equals(pet.getUser().getId(), userId)) {
+      throw new MeongnyangerangException(ErrorCode.INVALID_AUTHORIZED);
+    }
+
+    return pet;
   }
 }
